<resources>
    <string name="app_name">玩安卓</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <!--Home-->
    <string name="home_main">首页</string>
    <string name="home_square">广场</string>
    <string name="home_public">公众号</string>
    <string name="home_system">体系</string>
    <string name="home_project">项目</string>

    <!-- Nav Action -->
    <string name="nav_my_collect">我的收藏</string>
    <string name="nav_setting">系统设置</string>
    <string name="nav_about_us">关于我们</string>
    <string name="nav_logout">退出登录</string>
    <string name="nav_night_mode">夜间模式</string>
    <string name="nav_todo">TODO</string>
    <string name="nav_my_score">我的积分</string>
    <string name="nav_id">ID:</string>
    <string name="nav_grade">等级:</string>
    <string name="nav_rank">排名:</string>

    <!-- 广场 -->
    <string name="square">广场</string>
    <string name="my_share">我的分享</string>
    <string name="share_article">分享文章</string>
    <string name="share_article_title">文章标题</string>
    <string name="share_article_title_tip">100字以内</string>
    <string name="share_article_link">文章链接</string>
    <string name="share_article_link_tip">例如：https://www.wanandroid.com</string>
    <string name="share_success">分享成功</string>
    <string name="share_article_delete">已删除分享的文章</string>
    <string name="audited">待审核</string>
    <string name="submit_ing">正在提交...</string>

    <!-- Login -->
    <string name="username">用户名</string>
    <string name="password">密码</string>
    <string name="go_login">去登陆</string>
    <string name="login">登录</string>
    <string name="register">注册</string>
    <string name="no_account">没有账号？去注册</string>
    <string name="username_not_empty">用户名不能为空</string>
    <string name="password_not_empty">密码不能为空</string>
    <string name="have_account">已有账户？去登录</string>
    <string name="enter_password_again">再输入一次密码</string>
    <string name="confirm_password_not_empty">确认密码不能为空</string>
    <string name="password_cannot_match">两词密码不相同</string>
    <string name="login_success">登录成功</string>
    <string name="login_fail">登录失败</string>
    <string name="register_success">注册成功</string>
    <string name="register_fail">注册失败</string>
    <string name="confirm_logout">确认退出登录？</string>
    <string name="logout_success">已退出登录</string>
    <string name="logout_ing">正在退出登录</string>
    <string name="login_tint">请先登录</string>
    <string name="login_ing">登录中...</string>
    <string name="register_ing">注册中...</string>
    <string name="user_login">用户登录</string>
    <string name="login_tip">请使用WanAndroid账号登录！</string>
    <string name="user_register">注册用户</string>
    <string name="register_tip">用户注册后才可以登录！</string>

    <string name="nav_line_4" translatable="false">----</string>
    <string name="nav_line_2" translatable="false">--</string>

    <string name="title">温馨提示</string>
    <string name="exit_tip">再按一次退出程序</string>
    <string name="share_article_url">%1$s分享【%2$s】：%3$s</string>
    <string name="confirm">确定</string>
    <string name="cancel">取消</string>
    <string name="no_data">暂无数据</string>
    <string name="no_network">网络异常</string>
    <string name="no_network_tip">请检查网络后点击重新加载</string>
    <string name="data_error">数据获取失败</string>
    <string name="network_unavailable_tip">网络连接不可用,请检查网络设置!</string>

    <!-- Menu Action -->
    <string name="action_add">添加</string>
    <string name="action_search">搜索</string>
    <string name="action_share">分享</string>
    <string name="action_like">收藏</string>
    <string name="action_browser">用浏览器打开</string>

    <string name="setting_base">基本设置</string>
    <string name="setting_other">其他设置</string>
    <string name="setting_top">显示置顶文章</string>
    <string name="setting_toptip">开启后首页会显示置顶文章</string>
    <string name="choose_theme_color">主题颜色</string>
    <string name="choose_theme_color_summary">设置App的主题颜色</string>
    <string name="setting_about">关于</string>
    <string name="setting_project">开源项目</string>
    <string name="setting_version">版本</string>
    <string name="setting_exit">退出</string>
    <string name="setting_slidable_summary">类似 iOS 左侧滑动返回</string>
    <string name="setting_slidable_title">滑动返回</string>
    <string name="clear_cache">清除缓存</string>
    <string name="setting_mode">列表动画</string>
    <string name="setting_modetip">无</string>
    <string name="copyright">版权声明</string>
    <string name="copyright_tip">本App使用的Api均为 玩安卓网站 提供，仅供于大家学习交流，请禁止将本项目代码转为马甲包添加广告发布到应用市场！！！对那些发布了的人，我要说一句：WCNMD</string>
    <string name="copyright_summary">仅作个人及非商业用途</string>
    <string name="auther">作者</string>
    <string name="auther_name">一个练习时长两年半的安卓开发者→_→</string>
    <string name="project_address">项目源码</string>
    <string name="github_url">https://github.com/hegaojian/WanAndroid</string>
    <string name="open_project">开源项目</string>
    <string name="open_project_tips">项目中用到的开源库</string>

    <string name="back">返回</string>
    <string name="done">完成</string>
    <string name="custom">自定义</string>

    <string name="todo_delete">删除</string>
    <string name="todo_update">编辑</string>
    <string name="todo_confirm">完成</string>


    <string name="error_occurred">发生了意外错误。\n抱歉给老哥你带来了不便。</string>
    <string name="error_details">错误详情</string>
</resources>
